--- a/src/main/resources/static/web/assets/pages/air-fresheners.html
+++ b/src/main/resources/static/web/assets/pages/air-fresheners.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Velvet airFresheners - Homme</title>
+    <title>VF - Air Fresheners</title>
     <link rel="stylesheet" href="../style/style.css">
-    <link rel="shortcut icon" href="./web/assets/images/favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../images/favicon.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
@@ -153,7 +153,7 @@
                         The shopping cart is empty.
                     </div>
                     <div v-if="shoppingCart.length > 0" class="d-flex justify-content-end" style="margin: 1rem;">
-                        <a href="" class="btn" style="background-color:#ec225e; color:#ffffff;">Buy</a>
+                        <a href="./checkout.html" class="btn" style="background-color:#ec225e; color:#ffffff;">Buy</a>
                     </div>
                     <div v-if="shoppingCart.length == 0" class="d-flex justify-content-center" style="margin: 1rem;">
                         <a href="" class="btn" style="background-color:#ec225e; color:#ffffff;">Continue browsing</a>
