--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -252,7 +252,7 @@
         <main>
             <div id="AboutUs" class="container-fluid py-5">
                 <div class="container pt-5" style="margin-top: -5rem;">
-                    <div class="d-flex justify-content-around align-items-center">
+                    <div class="d-flex justify-content-around align-items-center flex-wrap">
                         <div class="col-lg-5" style="height: 500px;">
                             <img class="position-absolute w-100 h-100" src="./web/assets/images/AboutUs.png"
                                 style="object-fit: cover; border-radius: 1rem;">
@@ -296,20 +296,20 @@
                         <img src="./web/assets/images/olfato.png" alt="" style="width: 35rem;">
                     </div>
                 </div>
-                <div class="olf-family d-flex justify-content-around gap-5 flex-wrap">
+                <div class="olf-family d-flex justify-content-around gap-3 flex-wrap">
                     <img @click="filterByOlfactoryFamily(CITRUS)" class="img-olf" src="./web/assets/images/citrus.png"
-                        alt="citrus" style="width: 12rem; object-fit: contain;">
+                        alt="citrus" style="max-width: 25%; height: auto; object-fit: contain;">
                     <img @click="filterByOlfactoryFamily(ORIENTAL)" class="img-olf"
                         src="./web/assets/images/oriental.png" alt="oriental"
-                        style="width: 12rem; object-fit: contain;">
+                        style="max-width: 25%; height: auto; object-fit: contain;">
                     <img @click="filterByOlfactoryFamily(FOUGERE)" class="img-olf" src="./web/assets/images/fougére.png"
-                        alt="fougére" style="width: 12rem; object-fit: contain;">
+                        alt="fougére" style="max-width: 25%; height: auto; object-fit: contain;">
                     <img @click="filterByOlfactoryFamily(FLOWERY)" class="img-olf" src="./web/assets/images/flowery.png"
-                        alt="flowery" style="width: 12rem; object-fit: contain;">
+                        alt="flowery" style="max-width: 25%; height: auto; object-fit: contain;">
                     <img @click="filterByOlfactoryFamily(WOODY)" class="img-olf" src="./web/assets/images/woody.png"
-                        alt="woody" style="width: 12rem; object-fit: contain;">
+                        alt="woody" style="max-width: 25%; height: auto; object-fit: contain;">
                     <img @click="filterByOlfactoryFamily(CHYPRE)" class="img-olf" src="./web/assets/images/chypre.png"
-                        alt="chypre" style="width: 12rem; object-fit: contain;">
+                        alt="chypre" style="max-width: 25%; height: auto; object-fit: contain;">
                 </div>
 
             </div>
@@ -405,7 +405,8 @@
 
         </main>
         <footer>
-            <div class="container-fluid text-white-50 py-5 px-sm-3 px-lg-5" style="background-color: #020305;">
+            <div class="container-fluid text-white-50 py-5 px-sm-3 px-lg-5"
+                style="margin-top: 90px;background-color: #020305;">
                 <div class="d-flex justify-content-around align-items-center">
                     <div class="col-lg-3 col-md-6 mb-6">
                         <a href="" class="navbar-brand">
@@ -426,19 +427,23 @@
                                 href="#"><i class="fab fa-instagram"></i></a>
                         </div>
                     </div>
-                    <div class="d-flex justify-content-between" style="gap: 1rem;">
+                    <div class="d-flex justify-content-around flex-wrap">
                         <div class="col-lg-3 col-md-6 mb-5">
                             <h5 class="text-white text-uppercase mb-4" style="letter-spacing: 5px;">Pages</h5>
                             <div class="d-flex flex-column justify-content-start">
                                 <a class="text-white-50 mb-2" href="./web/assets/pages/fragances.html"><i
-                                        class="fa fa-angle-right mr-2"></i>Fragances</a>
-                                <a class="text-white-50 mb-2" href="./web/assets/pages/air-fresheners.html"><i
+                                    class="fa fa-angle-right mr-2"></i>Fragances</a>
+                                <a class="text-white-50 mb-2" href="./web/assets/pages/fragances.html"><i
                                         class="fa fa-angle-right mr-2"></i>Air Fresheners</a>
-                                <a class="text-white-50 mb-2" href="./web/assets/pages/creams.html"><i
-                                        class="fa fa-angle-right mr-2"></i>Creams</a>
-                                <a class="text-white-50 mb-2" href="#AboutUs"><i
-                                        class="fa fa-angle-right mr-2"></i>About
+                                        <a class="text-white-50 mb-2" href="./web/assets/pages/creams.html"><i
+                                            class="fa fa-angle-right mr-2"></i>Creams</a>
+                                <a class="text-white-50 mb-2" href="AboutUs"><i class="fa fa-angle-right mr-2"></i>About
                                     Us</a>
+                                    <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Blog</a>
+                                    <a class="text-white-50 mb-2" href="#"><i
+                                            class="fa fa-angle-right mr-2"></i>Testimonial</a>
+                                    <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Gif
+                                        Cards</a>
                             </div>
                         </div>
                         <div id="Contact" class="col-lg-6 col-md-6 mb-6">
@@ -447,10 +452,10 @@
                             <p><i class="fa fa-phone-alt mr-2"></i>+012 345 67890</p>
                             <p><i class="fa fa-envelope mr-2"></i>velvetfragances@gmail.com</p>
                         </div>
-                        <iframe
+                        <iframe 
                             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3280.543028422734!2d-111.61325043503413!3d35.212922840097946!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872d8ed73ade55ed%3A0x69dde6ff2b6b92df!2sThe%20UPS%20Store!5e0!3m2!1ses!2sar!4v1700769820848!5m2!1ses!2sar"
-                            width="200" height="200" style="border:0; border-radius: 1rem;" allowfullscreen=""
-                            loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                            width="100%" height="100%" style="border:0; border-radius: 1rem;" allowfullscreen=""
+                            loading="lazy" referrerpolicy="no-referrer-when-downgrade" class="iframe"></iframe>
                     </div>
                 </div>
                 <div class="row" style="margin-top: 2rem;">
